; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_crypto_tkip.c_tkip_setiv.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_crypto_tkip.c_tkip_setiv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_key = type { i32, %struct.tkip_ctx* }
%struct.tkip_ctx = type { %struct.ieee80211vap* }
%struct.ieee80211vap = type { i32 }

@IEEE80211_WEP_EXTIV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_key*, i32*)* @tkip_setiv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tkip_setiv(%struct.ieee80211_key* %0, i32* %1) #0 {
  %3 = alloca %struct.ieee80211_key*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.tkip_ctx*, align 8
  %6 = alloca %struct.ieee80211vap*, align 8
  %7 = alloca i32, align 4
  store %struct.ieee80211_key* %0, %struct.ieee80211_key** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %9 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %8, i32 0, i32 1
  %10 = load %struct.tkip_ctx*, %struct.tkip_ctx** %9, align 8
  store %struct.tkip_ctx* %10, %struct.tkip_ctx** %5, align 8
  %11 = load %struct.tkip_ctx*, %struct.tkip_ctx** %5, align 8
  %12 = getelementptr inbounds %struct.tkip_ctx, %struct.tkip_ctx* %11, i32 0, i32 0
  %13 = load %struct.ieee80211vap*, %struct.ieee80211vap** %12, align 8
  store %struct.ieee80211vap* %13, %struct.ieee80211vap** %6, align 8
  %14 = load %struct.ieee80211vap*, %struct.ieee80211vap** %6, align 8
  %15 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %16 = call i32 @ieee80211_crypto_get_keyid(%struct.ieee80211vap* %14, %struct.ieee80211_key* %15)
  %17 = shl i32 %16, 6
  store i32 %17, i32* %7, align 4
  %18 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %19 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 8
  %22 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %23 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = ashr i32 %24, 8
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 0
  store i32 %25, i32* %27, align 4
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 0
  %30 = load i32, i32* %29, align 4
  %31 = or i32 %30, 32
  %32 = and i32 %31, 127
  %33 = load i32*, i32** %4, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 1
  store i32 %32, i32* %34, align 4
  %35 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %36 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = ashr i32 %37, 0
  %39 = load i32*, i32** %4, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 2
  store i32 %38, i32* %40, align 4
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* @IEEE80211_WEP_EXTIV, align 4
  %43 = or i32 %41, %42
  %44 = load i32*, i32** %4, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 3
  store i32 %43, i32* %45, align 4
  %46 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %47 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  %49 = ashr i32 %48, 16
  %50 = load i32*, i32** %4, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 4
  store i32 %49, i32* %51, align 4
  %52 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %53 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = ashr i32 %54, 24
  %56 = load i32*, i32** %4, align 8
  %57 = getelementptr inbounds i32, i32* %56, i64 5
  store i32 %55, i32* %57, align 4
  %58 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %59 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 8
  %61 = ashr i32 %60, 32
  %62 = load i32*, i32** %4, align 8
  %63 = getelementptr inbounds i32, i32* %62, i64 6
  store i32 %61, i32* %63, align 4
  %64 = load %struct.ieee80211_key*, %struct.ieee80211_key** %3, align 8
  %65 = getelementptr inbounds %struct.ieee80211_key, %struct.ieee80211_key* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 8
  %67 = ashr i32 %66, 40
  %68 = load i32*, i32** %4, align 8
  %69 = getelementptr inbounds i32, i32* %68, i64 7
  store i32 %67, i32* %69, align 4
  ret void
}

declare dso_local i32 @ieee80211_crypto_get_keyid(%struct.ieee80211vap*, %struct.ieee80211_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
